--- a/app/addListing/userInfo/view.html
+++ b/app/addListing/userInfo/view.html
@@ -8,7 +8,7 @@
         <label>Username</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <input placeholder="Username" id="username" name="username" class="form-control required" type="text" ng-model="$root.username" required="true">
+        <input placeholder="Username" id="username" name="username" class="form-control required" type="text" ng-model="$root.username" required="true" ng-disabled="($root.addListingStepDone >= 2 || $root.disableUserinfo === 1)">
         <p ng-show="$root.addlistForm.username.$error.required" class="help-block">Required</p>
       </div>
     </div>
@@ -17,7 +17,7 @@
         <label>Email</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <input placeholder="Email" id="email" name="email" class="form-control required" type="email" ng-model="$root.email" required="true" ng-pattern="/^(([^<>()\[\]\.,;:\s@\']+(\.[^<>()\[\]\.,;:\s@\']+)*)|(\'.+\'))@(([^<>()[\]\.,;:\s@\']+\.)+[^<>()[\]\.,;:\s@\']{2,})$/i">
+        <input placeholder="Email" id="email" name="email" class="form-control required" type="email" ng-model="$root.email" ng-disabled="($root.addListingStepDone >= 2 || $root.disableUserinfo === 1)" required="true" ng-pattern="/^(([^<>()\[\]\.,;:\s@\']+(\.[^<>()\[\]\.,;:\s@\']+)*)|(\'.+\'))@(([^<>()[\]\.,;:\s@\']+\.)+[^<>()[\]\.,;:\s@\']{2,})$/i">
         <p ng-show="$root.addlistForm.email.$invalid" class="help-block">Required and please enter valid email</p>
       </div>
     </div>
