--- a/app/addListing/formNavSection/view.html
+++ b/app/addListing/formNavSection/view.html
@@ -5,8 +5,9 @@
     <li ng-repeat="link in $ctrl.links">
       <!-- <a ui-sref="{{ link.uiSref }}" class="disabled1 current_active  profile-nav-link" ng-click="false" ng-if="(link.name===$root.activeLink && $root.hideSteps.indexOf(link.stateName) === -1)">{{ link.name }} </a>
       <a ui-sref="{{ link.uiSref }}" ng-if="(link.name!==$root.activeLink && $root.hideSteps.indexOf(link.stateName) === -1 )" class="disabled  profile-nav-link" ng-click="false">{{ link.name }} </a> -->
-      <a ui-sref="{{ link.uiSref }}" class="disabled1 current_active  profile-nav-link" ng-click="false" ng-if="(link.name===$root.activeLink)">{{ link.name }} </a>
-      <a ui-sref="{{ link.uiSref }}" ng-if="(link.name!==$root.activeLink)" class="disabled  profile-nav-link" ng-click="false">{{ link.name }} </a>
+      <a ui-sref="{{ link.uiSref }}" class="disabled1 current_active  profile-nav-link" ng-click="false" ng-if="(link.name===$root.activeLink && $root.doneSteps.indexOf($root.activeLink) === -1)">{{ link.name }} </a>
+      <a ui-sref="{{ link.uiSref }}" ng-if="(link.name!==$root.activeLink && $root.doneSteps.indexOf(link.stateName) === -1)" class="disabled  profile-nav-link" ng-click="false">{{ link.name }} </a>
+      <a ui-sref="{{ link.uiSref }}" ng-if="($root.doneSteps.indexOf(link.stateName) >=0 && link.name !==$root.activeLink)" class="current_active profile-nav-link" ng-click="false">{{ link.name }} </a>
     </li>
   </ul>
 
