Updated addListing: membership and navigation

--- a/app/addListing/paidMember/view.html
+++ b/app/addListing/paidMember/view.html
@@ -10,7 +10,7 @@
             <th>
               <div class="pricing-header ">
                 <h4 class="package-title">
-                  Feature
+                  Features
                 </h4>
               </div>
             </th>
@@ -21,7 +21,7 @@
                 </h4>
                 <h4 class="package-pricing">
                   <p class="package-billing">
-                    <button type="button" ng-click="$ctrl.submit()" class="btn btn-success">Sign Up</button>
+                    <button type="button" ng-click="$ctrl.freeSignup()" class="btn btn-success">Sign Up</button>
                   </p>
                 </h4>
               </div>
@@ -50,65 +50,108 @@
         </thead>
         <tbody>
           <tr class="tr-background">
-            <td class="feature-label">Survey</td>
+            <td class="feature-label">Contact Details</td>
             <td></td>
             <td class=""></td>
             <td></td>
           </tr>
           <tr>
-            <td>Type</td>
-            <td>Free</td>
-            <td class="highlight-plan">Payed</td>
-            <td>Featured</td>
+            <td>Email Display</td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
           </tr>
           <tr>
-            <td>Type</td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td>Phone Number Display</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
-            <td class="highlight-plan">Payed</td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
-            </td>
-          </tr>
-          <tr>
-            <td>Type</td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
-            </td>
-            <td class="highlight-plan">Payed</td>
-            <td>Featured</td>
-          </tr>
-          <tr>
-            <td>Type</td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
-            </td>
-            <td class="highlight-plan">Payed</td>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
             <td><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
           <tr>
-            <td>Type</td>
-            <td>Free</td>
-            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i>
-            </td>
-            <td>Featured</td>
+            <td>Address Display</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i></td>
+            <td class="highlight-plan"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+          </tr>
+          <tr class="tr-background">
+            <td class="feature-label">Linking to your webpage</td>
+            <td></td>
+            <td class=""></td>
+            <td></td>
           </tr>
           <tr>
-            <td>Type</td>
-            <td>Free</td>
-            <td class="highlight-plan">Payed</td>
+            <td>Social links to Facebook</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
+            <td class="highlight-plan"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
             <td><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
           <tr>
-            <td>Type</td>
-            <td>Free</td>
-            <td class="highlight-plan"> <i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td>Social links to Twitter</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
-            <td>Featured</td>
+            <td class="highlight-plan"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
           </tr>
           <tr>
-            <td>Type</td>
-            <td class="bottomLine-free">Free</td>
-            <td class="highlight-plan bottomLine-sponsored">Payed</td>
+            <td>Social links to Instagram</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
+            <td class="highlight-plan"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr class="tr-background">
+            <td class="feature-label">Ability to sponsored pages</td>
+            <td></td>
+            <td class=""></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>State</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>City</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>County</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr class="tr-background">
+            <td class="feature-label">Ability to advertise of website</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i></td>
+            <td class=""><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+          </tr>
+          <tr class="tr-background">
+            <td class="feature-label">Features</td>
+            <td></td>
+            <td class=""></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Display top 9 center as best center</td>
+            <td class="bottomLine-free"><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
+            <td class="highlight-plan bottomLine-sponsored"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
             <td class="bottomLine-featured"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
