--- a/app/addListing/centerInfo/view.html
+++ b/app/addListing/centerInfo/view.html
@@ -47,8 +47,9 @@
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
         <!-- <input placeholder="Intake Phone" id="intakephone" name="intakephone" class="form-control required" ng-minlength="10" ng-maxlength="10" maxlength="10" ng-pattern="/^-?[0-9+]*$/" type="text" ng-model="$root.intakephone" required="true"> -->
-        <input placeholder="eg. 601-521-1542" id="intakephone" name="intakephone" class="form-control required" ng-change="$ctrl.testNum()" ng-minlength="10" ng-maxlength="12" maxlength="12" ng-pattern="/^(\([0-9]{3}\) |[0-9]{3}-)[0-9]{3}-[0-9]{4}$/" type="text" ng-model="$root.intakephone" required="true">
-        <p ng-show="$root.addlistForm.intakephone.$error.pattern" class="help-block">Invalid US number.</p>
+
+        <input placeholder="eg. (601) 521-1542" id="intakephone" name="intakephone" ng-change="$ctrl.testNum()" class="form-control required" type="text" required="true" phone-input restrict="reject" ng-minlength="14" maxlength="14" ng-model="$root.intakephone">
+        <p ng-show="$root.addlistForm.intakephone.$error.pattern || $root.addlistForm.intakephone.$error.minlength || $root.addlistForm.intakephone.$error.maxlength" class="help-block">Invalid US number.</p>
         <p ng-show="$root.addlistForm.intakephone.$error.required" class="help-block">Required</p>
       </div>
     </div>
